# progetto_Hr_assistant_Gege_Xia

./: .gitignore  CHANGE_LOG.md  pyproject.toml
hr_assistant/: __init__.py  config.py  custom_embedding.py  database.py  document_processor.py  semantic_chunking.py  utils.py
public/: app.css  theme.json
resumes/: curriculum-ai-rag-engineer.txt  curriculum-controllo-gestione.txt  curriculum-cybersecurity.txt  curriculum-data-analyst-bi.txt  curriculum-ecommerce-growth-manager.txt  curriculum-hr-talent-acquisition.txt  curriculum-marketing.txt  curriculum-software.txt  curriculum-ux-ui-product-designer.txt  test-csv.csv  test-html.html  test-json.json  upload-test-candidato.json
