[project]
name = "hr-assistant"
version = "0.1.0"
description = ""
authors = [
    {name = "gege-xia",email = "GEGEXIA94@GMAIL.COM"}
]
requires-python = ">=3.13,<3.14"
dependencies = [
    "chainlit (>=2.11.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
