[project]
name = "hr-assistant"
version = "0.1.0"
description = ""
authors = [
    {name = "gege-xia",email = "GEGEXIA94@GMAIL.COM"}
]
requires-python = ">=3.11,<3.12"
dependencies = [
    "chainlit (>=2.11.1,<3.0.0)",
    "onnxruntime (==1.16.3)",
    "chromadb (==0.4.24)",
    "openai (==0.28.1)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "ollama (>=0.6.2,<0.7.0)",
    "numpy (==1.26.4)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
